--- a/www-ng/src/app/views/fleet/fleet.component.html
+++ b/www-ng/src/app/views/fleet/fleet.component.html
@@ -24,13 +24,13 @@
       <div class="card">
         <div class="card-body">
           <input
-            type='text'
-            style='padding:8px;margin:15px auto;width:30%;'
-            placeholder='Bus No...'
-            (keyup)='updateFilter($event)'
+            type="text"
+            style="padding:8px;margin:15px auto;width:30%;"
+            placeholder="Bus No..."
+            (keyup)="updateFilter($event)"
           />
           <ngx-datatable #table
-            class='material'
+            class="bootstrap"
             [columnMode]="'force'"
             [headerHeight]="50"
             [footerHeight]="50"
