--- a/www-ng/src/app/views/home/home.component.html
+++ b/www-ng/src/app/views/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="col">
       <tabset type="pills">
         <tab heading="Critical Alert">
-            <table class="table table-bordered table-striped table-sm">
+            <table class="table table-responsive-sm table-hover table-outline mb-0">
                 <thead>
                   <tr>
                     <th>Bus #</th>
