--- a/www-ng/src/app/views/pmn-setting/pmn-setting.component.html
+++ b/www-ng/src/app/views/pmn-setting/pmn-setting.component.html
@@ -22,7 +22,8 @@
           </div>
           <p></p>
           <form [formGroup]="pmnSettingForm" class='table-responsive'>
-            <table class="table table-bordered" formArrayName="pmnSettingArray">
+            <table class="table table-responsive-sm table-hover table-outline mb-3" 
+              formArrayName="pmnSettingArray">
               <thead>
                 <tr>
                   <th>Item</th>
@@ -83,13 +84,13 @@
             </table>
             <!-- Buttons Block -->
             <div class="form-group">
-                <button type="button" class="btn btn-primary" 
+                <button type="button" class="btn btn-primary mr-1" 
                   (click)="addNewLine()">
                   Add
                 </button>
                 <button type="submit" 
                   [disabled]="!pmnSettingForm.valid"
-                  class="btn btn-primary"
+                  class="btn btn-primary ml-1"
                   (click)="primaryModal.show()">
                   Save
                 </button>
