--- a/www-ng/src/scss/_custom.scss
+++ b/www-ng/src/scss/_custom.scss
@@ -1,1 +1,26 @@
 // Here you can add other styles
+@import '~@swimlane/ngx-datatable/release/index.css';
+@import '~@swimlane/ngx-datatable/release/themes/bootstrap.css';
+@import '~@swimlane/ngx-datatable/release/themes/material.css';
+
+input {
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    display: inline-block;
+}
+
+.ngx-datatable.bootstrap {
+    border: 1px solid #d1d4d7;
+}
+
+.ngx-datatable.bootstrap .datatable-footer {
+    background: lightslategrey;
+    color: #ededed;
+}
+
+.ngx-datatable.bootstrap .datatable-header .datatable-header-cell {
+    font-weight: bold;
+}
