--- a/www-ng/src/app/views/fleet/snapshot.component.html
+++ b/www-ng/src/app/views/fleet/snapshot.component.html
@@ -136,7 +136,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-12 col-sm-5">
+    <div class="col">
       <div class="card">
         <div class="card-body">
           <ngx-datatable #table
@@ -149,23 +149,6 @@
             [limit]="10"
             [rows]='rows'>
           </ngx-datatable>
-        </div>
-      </div>
-    </div>
-    <div class="col-12 col-sm-7">
-      <div class="card">
-        <div class="card-body">
-          <div class="chart-wrapper">
-            <canvas baseChart class="chart"
-            [datasets]="lineChartData"
-            [labels]="lineChartLabels"
-            [options]="lineChartOptions"
-            [colors]="lineChartColours"
-            [legend]="lineChartLegend"
-            [chartType]="lineChartType"
-            (chartHover)="chartHovered($event)"
-            (chartClick)="chartClicked($event)"></canvas>
-          </div>
         </div>
       </div>
     </div>
