--- a/www-ng/src/app/views/monthly-report/monthly-report.component.html
+++ b/www-ng/src/app/views/monthly-report/monthly-report.component.html
@@ -1,16 +1,18 @@
 <div class="animated fadeIn">
  <div class="row">
-   <div class="col">
-     <div class="card">
-       <div class="card-body">
-         Year & Month Selection
-       </div>
-     </div>
-   </div>
- </div>
- <div class="row">
     <div class="col">
       <div class="card">
+        <div class="card-header">
+          <div class="row">
+            <div class="col-6">
+                <input
+                type="text"
+                class="ioc-table-filter" 
+                placeholder="Year & Month Selection"
+              />
+            </div>
+          </div>
+        </div>
         <div class="card-body">
           <ngx-datatable #table
             class='material'
