--- a/www-ng/src/app/views/pmn-setting/pmn-setting.component.html
+++ b/www-ng/src/app/views/pmn-setting/pmn-setting.component.html
@@ -2,7 +2,7 @@
  <div class="row">
     <div class="col">
       <div class="card">
-        <div class="card-body">
+        <div class="card-header">
           <div class="row">
             <div class="col-12 col-lg-3">
               <ngx-select [formControl]="ngxControl"
@@ -20,7 +20,8 @@
             </div>
             <div class="col-0 col-lg-9"></div>
           </div>
-          <p></p>
+        </div>
+        <div class="card-body">
           <form [formGroup]="pmnSettingForm" class='table-responsive'>
             <table class="table table-responsive-sm table-hover table-outline mb-3" 
               formArrayName="pmnSettingArray">
