--- a/www-ng/src/app/views/pmn/pmn.component.html
+++ b/www-ng/src/app/views/pmn/pmn.component.html
@@ -1,13 +1,4 @@
 <div class="animated fadeIn">
-  <div class="row">
-    <div class="col">
-      <input
-        type='text'
-        style='padding:8px;margin:15px auto;width:30%;'
-        placeholder='Bus No...'
-      />
-    </div>
-  </div>
   <div class="row pb-2">
     <div class="col"><i class="fa fa-exclamation-triangle">&nbsp;&nbsp;</i>Front Door Usage</div>
     <div class="col text-right"><button class="btn btn-primary">Reset</button></div>
@@ -15,6 +6,17 @@
  <div class="row">
     <div class="col">
       <div class="card">
+        <div class="card-header">
+          <div class="row">
+            <div class="col-12 col-md-6 col-lg-3">
+              <input
+                type="text"
+                class="ioc-table-filter"
+                placeholder="Bus No ..."
+              />
+            </div>
+          </div>
+        </div>
         <div class="card-body">
          <ngx-datatable #tablePmn
             class='material'
