--- a/www-ng/src/scss/_custom.scss
+++ b/www-ng/src/scss/_custom.scss
@@ -3,13 +3,15 @@
 @import '~@swimlane/ngx-datatable/release/themes/bootstrap.css';
 @import '~@swimlane/ngx-datatable/release/themes/material.css';
 
-input {
+.ioc-table-filter {
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
     border: 1px solid #ccc;
     box-sizing: border-box;
     display: inline-block;
+    padding:8px;
+    width:100%;
 }
 
 .ngx-datatable.bootstrap {
