--- a/www-ng/src/app/views/data-log/routing.component.html
+++ b/www-ng/src/app/views/data-log/routing.component.html
@@ -8,16 +8,24 @@
               <input
                 type="text"
                 class="ioc-table-filter text-left"
-                placeholder="Bus No ..."
+                placeholder="Bus No, File Time ..."
               />
             </div>
             <div class="col col-md-1 col-lg-3"></div>
             <div class="col-12 col-md-6">
-                <input
-                type="text"
-                class="ioc-table-filter text-left"
-                placeholder="Year & Month Selection"
-              />
+                <ngx-select [formControl]="ngxControl"
+                  class="ioc-dropdown"
+                  [allowClear]="true"
+                  [items]="months"
+                  placeholder="Year & Month ..."
+                  (typed)="inputTyped('ngx-select', $event)"
+                  (focus)="doFocus()"
+                  (blur)="doBlur()"
+                  (open)="doOpen()"
+                  (close)="doClose()"
+                  (select)="doSelect($event)"
+                  (remove)="doRemove($event)">
+                </ngx-select>
             </div>
           </div>
         </div>
