--- a/www-ng/src/app/views/monthly-report/monthly-report.component.html
+++ b/www-ng/src/app/views/monthly-report/monthly-report.component.html
@@ -4,12 +4,20 @@
       <div class="card">
         <div class="card-header">
           <div class="row">
-            <div class="col-6">
-                <input
-                type="text"
-                class="ioc-table-filter" 
-                placeholder="Year & Month Selection"
-              />
+            <div class="col-6 col-lg-3">
+              <ngx-select [formControl]="ngxControl"
+                class="ioc-dropdown"
+                [allowClear]="true"
+                [items]="months"
+                placeholder="Year & Month ..."
+                (typed)="inputTyped('ngx-select', $event)"
+                (focus)="doFocus()"
+                (blur)="doBlur()"
+                (open)="doOpen()"
+                (close)="doClose()"
+                (select)="doSelect($event)"
+                (remove)="doRemove($event)">
+              </ngx-select>
             </div>
           </div>
         </div>
