--- a/www-ng/src/app/views/pmn-setting/pmn-setting.component.html
+++ b/www-ng/src/app/views/pmn-setting/pmn-setting.component.html
@@ -2,27 +2,8 @@
  <div class="row">
     <div class="col">
       <div class="card">
-        <div class="card-header">
-          <div class="row">
-            <div class="col-12 col-lg-3">
-              <ngx-select [formControl]="ngxControl"
-                [allowClear]="true"
-                [items]="vehicles"
-                placeholder="Bus No..."
-                (typed)="inputTyped('ngx-select', $event)"
-                (focus)="doFocus()"
-                (blur)="doBlur()"
-                (open)="doOpen()"
-                (close)="doClose()"
-                (select)="doSelect($event)"
-                (remove)="doRemove($event)">
-              </ngx-select>
-            </div>
-            <div class="col-0 col-lg-9"></div>
-          </div>
-        </div>
         <div class="card-body">
-          <form [formGroup]="pmnSettingForm" class='table-responsive'>
+          <form [formGroup]="pmnSettingForm" class="table-responsive">
             <table class="table table-responsive-sm table-hover table-outline mb-3" 
               formArrayName="pmnSettingArray">
               <thead>
