--- a/www-ng/src/app/views/pmn/pmn.component.html
+++ b/www-ng/src/app/views/pmn/pmn.component.html
@@ -1,7 +1,14 @@
 <div class="animated fadeIn">
   <div class="row pb-2">
-    <div class="col"><i class="fa fa-exclamation-triangle">&nbsp;&nbsp;</i>Front Door Usage</div>
-    <div class="col text-right"><button class="btn btn-primary">Reset</button></div>
+    <div class="col-4 col-sm-1">
+      <i class="fa fa-exclamation-triangle fa-3x"></i>
+    </div>
+    <div class="col-8 col-sm-5 text-left">
+      <h2>Front Door Usage</h2>
+    </div>
+    <div class="col-12 col-sm-6 text-right">
+      <button class="btn btn-primary">Reset</button>
+    </div>
   </div>
  <div class="row">
     <div class="col">
