add data of routing and connection

--- a/www-ng/src/app/views/alert-list/alert-list.component.html
+++ b/www-ng/src/app/views/alert-list/alert-list.component.html
@@ -32,8 +32,7 @@
               </ng-template>
             </ngx-datatable-column>
             <ngx-datatable-column name="Bus No." prop="bus_number">
-              <ng-template let-row="row" let-col="column"
-                let-value="value" ngx-datatable-cell-template>
+              <ng-template let-value="value" ngx-datatable-cell-template>
                 {{value}}
               </ng-template>
             </ngx-datatable-column>
