--- a/www-ng/src/app/views/fleet/fleet.component.html
+++ b/www-ng/src/app/views/fleet/fleet.component.html
@@ -71,7 +71,7 @@
             </ngx-datatable-column>
             <ngx-datatable-column name="Updated" prop="update_time">
               <ng-template let-value="value" ngx-datatable-cell-template>
-                {{value | date:'yyyy-MM-dd HH:mm:ss'}}
+                {{value | toTime | date:'MM/dd/yyyy HH:mm:ss'}}
               </ng-template>
             </ngx-datatable-column>
           </ngx-datatable>
