--- a/www-ng/src/app/views/home/home.component.html
+++ b/www-ng/src/app/views/home/home.component.html
@@ -10,14 +10,13 @@
             [footerHeight]="50"
             [rowHeight]="'auto'"
             [limit]="10"
-            [rows]="alertsCritical">
+            [rows]="dataCritical$ | async">
             <ngx-datatable-column name="Bus No." prop="bus_number">
-              <ng-template let-row="row" let-col="column"
-                let-value="value" ngx-datatable-cell-template>
+              <ng-template let-value="value" ngx-datatable-cell-template>
                 {{value}}
               </ng-template>
             </ngx-datatable-column>
-            <ngx-datatable-column name="Item" prop="alert_name">
+            <ngx-datatable-column name="Item" prop="alert_desc">
               <ng-template let-row="row" let-col="column"
                 let-value="value" ngx-datatable-cell-template>
                 <a [routerLink]="['/alert-list/alert', row['alert_id']]">
@@ -25,13 +24,14 @@
                 </a>
               </ng-template>
             </ngx-datatable-column>
-            <ngx-datatable-column name="Time" prop="alert_time">
+            <ngx-datatable-column name="Time" prop="event_time">
               <ng-template let-value="value" ngx-datatable-cell-template>
-                {{value}}
+                {{value | toTime | date:'MM/dd/yyyy HH:mm:ss'}}
               </ng-template>
             </ngx-datatable-column>
-            <ngx-datatable-column name="Odometer">
-              <ng-template>
+            <ngx-datatable-column name="Odometer" prop="odometer">
+              <ng-template let-value="value" ngx-datatable-cell-template>
+                {{value}}
               </ng-template>
             </ngx-datatable-column>
           </ngx-datatable>
@@ -44,14 +44,14 @@
             [footerHeight]="50"
             [rowHeight]="'auto'"
             [limit]="10"
-            [rows]="alertsGeneral">
+            [rows]="dataGeneral$ | async">
             <ngx-datatable-column name="Bus No." prop="bus_number">
               <ng-template let-row="row" let-col="column"
                 let-value="value" ngx-datatable-cell-template>
                 {{value}}
               </ng-template>
             </ngx-datatable-column>
-            <ngx-datatable-column name="Item" prop="alert_name">
+            <ngx-datatable-column name="Item" prop="alert_desc">
               <ng-template let-row="row" let-col="column"
                 let-value="value" ngx-datatable-cell-template>
                 <a [routerLink]="['/alert-list/alert', row['alert_id']]">
@@ -59,48 +59,57 @@
                 </a>
               </ng-template>
             </ngx-datatable-column>
-            <ngx-datatable-column name="Time" prop="alert_time">
+            <ngx-datatable-column name="Time" prop="event_time">
               <ng-template let-value="value" ngx-datatable-cell-template>
-                {{value}}
+                {{value | toTime | date:'MM/dd/yyyy HH:mm:ss'}}
               </ng-template>
             </ngx-datatable-column>
-            <ngx-datatable-column name="Odometer">
-              <ng-template>
+            <ngx-datatable-column name="Odometer" prop="odometer">
+              <ng-template let-value="value" ngx-datatable-cell-template>
+                {{value}}
               </ng-template>
             </ngx-datatable-column>
           </ngx-datatable>
         </tab>
         <tab heading="Preventive Maint. Notification">
-            <table class="table table-bordered table-striped table-sm">
-                <thead>
-                  <tr>
-                    <th>Bus #</th>
-                    <th>Item</th>
-                    <th>Event Time</th>
-                    <th>Odometer</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>0001</td>
-                    <td>Rear door open failure</td>
-                    <td>2018/01/01</td>
-                    <td>12345.6</td>
-                  </tr>
-                  <tr>
-                    <td>0003</td>
-                    <td>ABS fault code</td>
-                    <td>2018/02/01</td>
-                    <td>12345.6</td>
-                  </tr>
-                  <tr>
-                    <td>0005</td>
-                    <td>Wiper on failure</td>
-                    <td>2018/02/01</td>
-                    <td>12345.6</td>
-                  </tr>
-                </tbody>
-              </table>
+          <ngx-datatable #table
+            class="material"
+            [columnMode]="'force'"
+            [headerHeight]="50"
+            [footerHeight]="50"
+            [rowHeight]="'auto'"
+            [limit]="10"
+            [rows]="dataPmn$ | async">
+            <ngx-datatable-column name="Bus No." prop="bus_number">
+              <ng-template let-row="row" let-col="column"
+                let-value="value" ngx-datatable-cell-template>
+                {{value}}
+              </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column name="Item" prop="item">
+              <ng-template let-row="row" let-col="column"
+                let-value="value" ngx-datatable-cell-template>
+                <a [routerLink]="['/alert-list/alert', row['alert_id']]">
+                  {{value}}
+                </a>
+              </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column name="Time" prop="event_time">
+              <ng-template let-value="value" ngx-datatable-cell-template>
+                {{value | toTime | date:'MM/dd/yyyy HH:mm:ss'}}
+              </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column name="Odometer" prop="odometer">
+              <ng-template let-value="value" ngx-datatable-cell-template>
+                {{value}}
+              </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column name="Cycle Value" prop="cycle_value">
+              <ng-template let-value="value" ngx-datatable-cell-template>
+                {{value}}
+              </ng-template>
+            </ngx-datatable-column>
+          </ngx-datatable>
         </tab>
       </tabset>
     </div>
