--- a/www-ng/src/app/views/alert-list/alert.component.html
+++ b/www-ng/src/app/views/alert-list/alert.component.html
@@ -7,7 +7,8 @@
         <h2>{{alertName$ | async}}</h2>
       </div>
       <div class="col-12 col-sm-6 text-right">
-        <button class="btn btn-primary">Acknowledge</button>
+        <button type="submit" class="btn btn-primary"
+          (click)="primaryModal.show()">Acknowledge</button>
       </div>
   </div>
   <div class="row">
@@ -221,7 +222,24 @@
           </div>
         </div>
       </div>
-
     </div>
   </div>
 </div>
+<div bsModal #primaryModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-primary" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Success</h4>
+          <button type="button" class="close" (click)="primaryModal.hide()" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>Alert was acknowledged!</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" (click)="primaryModal.hide()">Close</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
