--- a/www-ng/src/app/views/fleet/snapshot.component.html
+++ b/www-ng/src/app/views/fleet/snapshot.component.html
@@ -23,44 +23,15 @@
       <div class="card">
         <div class="card-body">
           <div class="row">
-            <div class="col-12 col-sm-6 col-lg-3">
-              <div class="card">
-                <div class="card-body text-center"><i class="fa fa-car fa-3x"></i></div>
+            <div class="col-12 col-sm-9">
+              <div class="row" style="height: 250px">
+                <div class="col-12 col-sm-6 col-lg-4" *ngFor="let icon of moduleIcons$ | async">
+                  <img class="indicator-icon" [src]="icon"/>
+                </div>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-lg-3">
-              <div class="card">
-                <div class="card-body text-center"><i class="fa fa-car fa-3x"></i></div>
-              </div>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-3">
-              <div class="card">
-                <div class="card-body text-center"><i class="fa fa-car fa-3x"></i></div>
-              </div>
-            </div>
-            <!-- <div class="col-12 col-sm-6 col-lg-3">
-            </div> -->
-          </div>
-          <div class="row">
-            <div class="col-12 col-sm-6 col-lg-3">
-              <div class="card">
-                <div class="card-body text-center"><i class="fa fa-car fa-3x"></i></div>
-              </div>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-3">
-              <div class="card">
-                <div class="card-body text-center"><i class="fa fa-car fa-3x"></i></div>
-              </div>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-3">
-              <div class="card">
-                <div class="card-body text-center"><i class="fa fa-car fa-3x"></i></div>
-              </div>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-3">
-              <div class="card">
-                <div class="card-body text-center"><i class="fa fa-car fa-3x"></i></div>
-              </div>
+            <div class="col-12 col-sm-3">
+              <img class="indicator-icon" src="assets/img/indicators/mbc.png"/>
             </div>
           </div>
           <div class="row no-gutters">
