--- a/www-ng/src/app/views/fleet/snapshot.component.html
+++ b/www-ng/src/app/views/fleet/snapshot.component.html
@@ -23,15 +23,19 @@
       <div class="card">
         <div class="card-body">
           <div class="row">
-            <div class="col-12 col-sm-9">
-              <div class="row" style="height: 250px">
+            <div class="col-12 col-md-9">
+              <div class="row">
                 <div class="col-12 col-sm-6 col-lg-4" *ngFor="let icon of moduleIcons$ | async">
-                  <img class="indicator-icon" [src]="icon"/>
+                  <div class="text-center align-middle">
+                    <img class="text-center mb-4" [src]="icon"/>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="col-12 col-sm-3">
-              <img class="indicator-icon" src="assets/img/indicators/mbc.png"/>
+            <div class="col-12 col-md-3">
+              <div class="text-center align-middle">
+                <img class="text-center mb-4" src="assets/img/indicators/mbc.jpg"/>
+              </div>
             </div>
           </div>
           <div class="row no-gutters">
