--- a/www-ng/src/app/views/fleet/snapshot.component.html
+++ b/www-ng/src/app/views/fleet/snapshot.component.html
@@ -1,6 +1,6 @@
 <div class="animated fadeIn">
   <div class="row">
-    <div class="col-12 col-sm-5">
+    <div class="col-12 col-md-5">
       <div class="card">
         <div class="card-header">
           Bus No. {{vid$ | async }}
@@ -19,7 +19,7 @@
         </div>
       </div>
     </div>
-    <div class="col-12 col-sm-7">
+    <div class="col-12 col-md-7">
       <div class="card">
         <div class="card-body">
           <div class="row">
