--- a/www-ng/src/app/views/fleet/snapshot.component.html
+++ b/www-ng/src/app/views/fleet/snapshot.component.html
@@ -3,7 +3,7 @@
     <div class="col-12 col-md-5">
       <div class="card">
         <div class="card-header">
-          Bus No. {{vid$ | async }}
+          Bus No. {{ (vehicle$ | async)?.bus_number }}
         </div>
         <div class="card-body">
           <agm-map *ngIf="locations$ | async; let loc"
