--- a/www-ng/src/app/views/data-log/connection.component.html
+++ b/www-ng/src/app/views/data-log/connection.component.html
@@ -9,6 +9,7 @@
                 type="text"
                 class="ioc-table-filter text-left"
                 placeholder="Bus No ..."
+                (keyup)="updateFilter($event)"
               />
             </div>
             <div class="col col-md-1 col-lg-3"></div>
@@ -44,7 +45,7 @@
                   {{value}}
                 </ng-template>
               </ngx-datatable-column>
-              <ngx-datatable-column name="Bus No." prop="vehicle_number">
+              <ngx-datatable-column name="Bus No." prop="bus_number">
                 <ng-template let-value="value" ngx-datatable-cell-template>
                   {{value}}
                 </ng-template>
